--- a/servers/http-mock-server/package.json
+++ b/servers/http-mock-server/package.json
@@ -22,8 +22,11 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
+    "@types/lodash": "^4.17.5",
+    "lodash": "^4.17.21",
     "nestjs-zod": "^3.0.0",
     "openapi3-ts": "^4.3.3",
     "reflect-metadata": "^0.1.13",
