feat: 🎸maintain server data

--- a/servers/http-mock-server/package.json
+++ b/servers/http-mock-server/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
     "@types/lodash": "^4.17.5",
+    "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "nestjs-zod": "^3.0.0",
     "openapi3-ts": "^4.3.3",
